# Salari_Italia

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml  update-data.yml
dashboard/: app.py
data/validation/: pipeline_report.json
docs/: dizionario_dati.md  fonti.md  matrice_copertura.md  metodologia.md
scripts/: run_pipeline.py
src/salari_italia/: __init__.py  config.py  dashboard.py  data_export.py  eurostat.py  gender_gap.py  harmonise.py  indicators.py  istat.py  oecd.py  pipeline.py  schema.py  validation.py
src/salari_italia/resources/: gender_pay_gap_decomposition_ses2022.csv
tests/: test_dashboard.py  test_data_export.py  test_eurostat.py  test_gender_gap.py  test_harmonise.py  test_indicators.py  test_oecd.py
